--- a/index.html
+++ b/index.html
@@ -5,147 +5,141 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Studio</title>
+
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/2.0.0/modern-normalize.min.css"
       integrity="sha512-4xo8blKMVCiXpTaLzQSLSw3KFOVPWhm/TRtuPVc4WG6kUgjH6J03IBuG7JZPkcWMxJ5huwaBpOpnwYElP/m6wg=="
       crossorigin="anonymous" referrerpolicy="no-referrer" />
+
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-  <link href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet" />
+  <link
+      href="https://fonts.googleapis.com/css2?family=Lobster&family=Raleway:wght@800&family=Roboto:wght@400;500;700;900&display=swap"
+      rel="stylesheet" />
   <link href="./css/styles.css" rel="stylesheet" />
 </head>
-<body>
-  <header class="page-header">
-    <div class="container-header container">
-      <nav class="navigation-list">
-        <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
-        <ul class="navigation-page list">
-          <li><a href="./index.html" class="navigation-link link">Studio</a></li>
-          <li><a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
-          <li><a href="" class="navigation-link link">Contacts</a></li>
-        </ul>
-      </nav>
 
-      <address class="address">
-          <ul class="address-list list">
-              <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
-              <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
-          </ul>
-      </address>
-    </div>
-  </header>
+<body>
+    <header class="page-header">
+        <div class="container-header container">
+            <nav class="navigation-list">
+                <a href="./index.html" class="navigation-logo link">Web<span class="logo-span">Studio</span></a>
+                <ul class="navigation-page list">
+                    <li><a href="./index.html" class="navigation-link link">Studio</a></li>
+                    <li><a href="./portfolio.html" class="navigation-link link">Portfolio</a></li>
+                    <li><a href="" class="navigation-link link">Contacts</a></li>
+                </ul>
+            </nav>
+
+            <address class="address">
+                <ul class="address-list list">
+                    <li><a href="mailto:info@devstudio.com" class="address-link link">info@devstudio.com</a></li>
+                    <li><a href="tel:+110001111111" class="address-link link">+11 (000) 111-11-11</a></li>
+                </ul>
+            </address>
+        </div>
+    </header>
 
     <main>
-        <!--Section no. 1 filters-->
-        <section class="section-project">
+        <!--Section no. 1 HERO-->
+        <section class="hero-section">
             <div class="container">
-                <h1 class="hidden-headline visually-hidden">Fiter Btn Active</h1>
+                <h1 class="main-headline">Effective Solutions for Your Business</h1>
+                <button type="button" class="main-headline-button">Order Service</button>
+            </div>
+        </section>
 
-                <ul class="filters-list list">
-                    <li><button type="button" class="filter-button">All</button></li>
-                    <li><button type="button" class="filter-button">Web Site</button></li>
-                    <li><button type="button" class="filter-button">App</button></li>
-                    <li><button type="button" class="filter-button">Design</button></li>
-                    <li><button type="button" class="filter-button">Marketing</button></li>
-                </ul>
-
-                <ul class="project-list list">
-                    <li class="project-point">
-                        <a href="./images/banking-app-image-01.jpg" class="project-photo link">
-                            <img src="./images/banking-app-image-01.jpg"
-                                alt="the appearance of the screens from the banking application" width="360"
-                                height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Banking App Interface Concept</h2>
-                                <p class="project-text">App</p>
-                            </div>
-                        </a>
+        <!--Section no. 2 Our objectives-->
+        <section class="section-objectives">
+            <div class="container">
+                <h2 class="sub-headline visually-hidden">Our objectives</h2>
+                <ul class="list">
+                    <li class="list-point-objectives">
+                        <h3 class="sub-headline-objectives">Strategy</h3>
+                        <p class="text-objectives">Our goal is to identify the business problem to walk away with the
+                            perfect and creative solution.</p>
                     </li>
-                    <li class="project-point">
-                        <a href="./images/cashless_payment-image-02.jpg" class="project-photo link">
-                            <img src="./images/cashless_payment-image-02.jpg" alt="phone reading QR code " width="360"
-                                height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Cashless Payment</h2>
-                                <p class="project-text">Marketing</p>
-                            </div>
-                        </a>
+                    <li class="list-point-objectives">
+                        <h3 class="sub-headline-objectives">Punctuality</h3>
+                        <p class="text-objectives">Bring the key message to the brand's audience for the best price
+                            within the shortest possible time.</p>
                     </li>
-                    <li class="project-point">
-                        <a href="./images/meditaion-app-image-03.jpg" class="project-photo link">
-                            <img src="./images/meditaion-app-image-03.jpg"
-                                alt="laptop and phone with the same wallpaper" width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Meditation App</h2>
-                                <p class="project-text">App</p>
-                            </div>
-                        </a>
+                    <li class="list-point-objectives">
+                        <h3 class="sub-headline-objectives">Diligence</h3>
+                        <p class="text-objectives">Research and confirm brands that present the strongest digital growth
+                            opportunities and minimize risk.</p>
                     </li>
-                    <li class="project-point">
-                        <a href="./images/taxi-service-image-04.jpg" class="project-photo link">
-                            <img src="./images/taxi-service-image-04.jpg" alt="driver using the mobile application"
-                                width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Taxi Service</h2>
-                                <p class="project-text">Marketing</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="project-point">
-                        <a href="./images/screen-illustrations-image-05.jpg" class="project-photo link">
-                            <img src="./images/screen-illustrations-image-05.jpg"
-                                alt="five types of wallpaper for mobile phone" width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Screen Illustrations</h2>
-                                <p class="project-text">Design</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="project-point">
-                        <a href="./images/online-courses-image-06.jpg" class="project-photo link">
-                            <img src="./images/online-courses-image-06.jpg"
-                                alt="woman in an orange sweater using a mobile phone" width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Online Courses</h2>
-                                <p class="project-text">Marketing</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="project-point">
-                        <a href="./images/instagram-stories-concept-image-07.jpg" class="project-photo link">
-                            <img src="./images/instagram-stories-concept-image-07.jpg"
-                                alt="six screens showing a woman in a white blouse" width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Instagram Stories Concept</h2>
-                                <p class="project-text">Design</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="project-point">
-                        <a href="./images/organic-food-image-08.jpg" class="project-photo link">
-                            <img src="./images/organic-food-image-08.jpg"
-                                alt="fragment of a woman dressed in a gray tracksuit carrying a bag of fruit"
-                                width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Organic Food</h2>
-                                <p class="project-text">Web Site</p>
-                            </div>
-                        </a>
-                    </li>
-                    <li class="project-point">
-                        <a href="./images/fresh-coffee-image-09.jpg" class="project-photo link">
-                            <img src="./images/fresh-coffee-image-09.jpg" alt="someone pours milk into coffee"
-                                width="360" height="300">
-                            <div class="portfolio-section-container">
-                                <h2 class="project-tittle">Fresh Coffee</h2>
-                                <p class="project-text">Web Site</p>
-                            </div>
-                        </a>
+                    <li class="list-point-objectives">
+                        <h3 class="sub-headline-objectives">Technologies</h3>
+                        <p class="text-objectives">Design practice focused on digital experiences. We bring forth a deep
+                            passion for problem-solving.</p>
                     </li>
                 </ul>
             </div>
 
         </section>
 
+        <!--Section no. 3 What are we doing-->
+        <section class="doing-section">
+            <div class="container">
+                <h2 class="sub-headline">What are we doing</h2>
+                <ul class="list">
+                    <li class="list-point-doing"><img src="./images/monitor-header-image-01.jpg"
+                            alt="monitor with sheets" width="360" height="300"></li>
+                    <li class="list-point-doing"><img src="./images/screen-mobile-phone-header-image-02.jpg"
+                            alt="four mobile phone screens" width="360" height="300"></li>
+                    <li class="list-point-doing"><img src="./images/laptop-mobile-phone-header-image-03.jpg"
+                            alt="hand holding a mobile phone on the background of a laptop" width="360" height="300">
+                    </li>
+                </ul>
+            </div>
+        </section>
+
+        <!--Section no. 4 Our team-->
+        <section class="team-section">
+            <div class="container">
+                <h2 class="sub-headline">Our team</h2>
+                <ul class="list">
+                    <li class="list-team">
+                        <img src="./images/team-product-designer-header-image-04.jpg"
+                            alt="man with a black beard, wearing a blue shirt" width="264" height="260"
+                            class="photo-team">
+                        <div class="name-team">
+                            <h3 class="team-peaple-name">Mark Guerrero</h3>
+                            <p class="team-position">Product Designer</p>
+                        </div>
+                    </li>
+
+                    <li class="list-team">
+                        <img src="./images/team-frontend-developer-header-image-05.jpg"
+                            alt="man with blond hair, wearing a blue shirt" width="264" height="260" class="photo-team">
+                        <div class="name-team">
+                            <h3 class="team-peaple-name">Tom Ford</h3>
+                            <p class="team-position">Frontend Developer</p>
+                        </div>
+                    </li>
+
+                    <li class="list-team">
+                        <img src="./images/team-marketing-header-image-06.jpg"
+                            alt="woman with long brown hair, wearing a pink sweater" width="264" height="260"
+                            class="photo-team">
+                        <div class="name-team">
+                            <h3 class="team-peaple-name">Camila Garcia</h3>
+                            <p class="team-position">Marketing</p>
+                        </div>
+
+                    </li>
+                    <li class="list-team">
+                        <img src="./images/team-ui-designer-header-image-07.jpg"
+                            alt="man with black hair, wearing a gray t-shirt" width="264" height="260"
+                            class="photo-team">
+                        <div class="name-team">
+                            <h3 class="team-peaple-name">Daniel Wilson</h3>
+                            <p class="team-position">UI Designer</p>
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </section>
     </main>
 
     <footer class="footer">
@@ -156,6 +150,7 @@
                 growth solutions.</p>
         </div>
     </footer>
+
 
 </body>
 
