--- a/portfolio.html
+++ b/portfolio.html
@@ -30,71 +30,114 @@
           </ul>
         </address>
       </div>
-  </header>
+    </header>
 
     <main>
-      <!--section no.1 -->
-      <section>
-        <ul class="list">
-          <li><button type="button" class="portfolio-button">All</button></li>
-          <li><button type="button" class="portfolio-button">Web Site</button></li>
-          <li><button type="button" class="portfolio-button">App</button></li>
-          <li><button type="button" class="portfolio-button">Design</button></li>
-          <li><button type="button" class="portfolio-button">Marketing</button></li>
-        </ul>
-      
-        <ul class="list">
-          <li>
-            <img src="images/portfolio01.jpg" width="360" height="300" alt="Banking App Interface Concept - banking application options are shown">
-              <h2 class="portfolio-title">Banking App Interface Concept</h2>
-              <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="images/portfolio02.jpg" width="360" height="300" alt="Cashless Payment - The hand holds the phone and brings it closer to the reader">
-              <h2 class="portfolio-title">Cashless Payment</h2>
-              <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="images/portfolio03.jpg" width="360" height="300" alt="Meditation App - laptop and phone with the same wallpaper">
-              <h2 class="portfolio-title">Meditation App</h2>
-              <p class="portfolio-text">App</p>
-          </li>
-          <li>
-            <img src="images/portfolio04.jpg" width="360" height="300" alt="Taxi Service - driver using the mobile application">
-              <h2 class="portfolio-title">Taxi Service</h2>
-              <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="images/portfolio05.jpg" width="360" height="300" alt="Screen Illustrations - five different wallpapers for mobile phone">
-              <h2 class="portfolio-title">Screen Illustrations</h2>
-              <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img src="images/portfolio06.jpg" width="360" height="300" alt="Online Courses - young woman in orange sweater talking on mobile phone">
-              <h2 class="portfolio-title">Online Courses</h2>
-              <p class="portfolio-text">Marketing</p>
-          </li>
-          <li>
-            <img src="images/portfolio07.jpg" width="360" height="300" alt="Instagram Stories Concept - six pictures per topic make everything feel easier">
-              <h2 class="portfolio-title">Instagram Stories Concept</h2>
-              <p class="portfolio-text">Design</p>
-          </li>
-          <li>
-            <img src="images/portfolio08.jpg" width="360" height="300" alt="Organic Food - woman carries vegetables in a net">
-              <h2 class="portfolio-title">Organic Food</h2>
-              <p class="portfolio-text">Web Site</p>
-          </li>
-          <li>
-            <img src="images/portfolio09.jpg" width="360" height="300" alt="Fresh Coffee - hand pours milk into a cup of coffee">
-              <h2 class="portfolio-title">Fresh Coffee</h2>
-              <p class="portfolio-text">Web Site</p>
-          </li>
-        </ul>
+      <!--Section no.1 filters-->
+      <section class="section-project">
+        <div class="container">
+          <h1 class="hidden-headline visually-hidden">Fiter Btn Active</h1>
+
+          <ul class="filters-list list">
+            <li><button type="button" class="filter-button">All</button></li>
+            <li><button type="button" class="filter-button">Web Site</button></li>
+            <li><button type="button" class="filter-button">App</button></li>
+            <li><button type="button" class="filter-button">Design</button></li>
+            <li><button type="button" class="filter-button">Marketing</button></li>
+          </ul>
+
+          <ul class="project-list list">
+            <li class="project-point">
+              <a href="./images/banking-app-image-01.jpg" class="project-photo link">
+                <img src="./images/banking-app-image-01.jpg" alt="the appearance of the screens from the banking application" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Banking App Interface Concept</h2>
+                  <p class="project-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/cashless_payment-image-02.jpg" class="project-photo link">
+                <img src="./images/cashless_payment-image-02.jpg" alt="phone reading QR code " width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Cashless Payment</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/meditaion-app-image-03.jpg" class="project-photo link">
+                <img src="./images/meditaion-app-image-03.jpg" alt="laptop and phone with the same wallpaper" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Meditation App</h2>
+                  <p class="project-text">App</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/taxi-service-image-04.jpg" class="project-photo link">
+                <img src="./images/taxi-service-image-04.jpg" alt="driver using the mobile application" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Taxi Service</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/screen-illustrations-image-05.jpg" class="project-photo link">
+                <img src="./images/screen-illustrations-image-05.jpg" alt="five types of wallpaper for mobile phone" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Screen Illustrations</h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/online-courses-image-06.jpg" class="project-photo link">
+                <img src="./images/online-courses-image-06.jpg" alt="woman in an orange sweater using a mobile phone" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Online Courses</h2>
+                  <p class="project-text">Marketing</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/instagram-stories-concept-image-07.jpg" class="project-photo link">
+                <img src="./images/instagram-stories-concept-image-07.jpg" alt="six screens showing a woman in a white blouse" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Instagram Stories Concept</h2>
+                  <p class="project-text">Design</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/organic-food-image-08.jpg" class="project-photo link">
+                <img src="./images/organic-food-image-08.jpg" alt="fragment of a woman dressed in a gray tracksuit carrying a bag of fruit" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Organic Food</h2>
+                  <p class="project-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+            <li class="project-point">
+              <a href="./images/fresh-coffee-image-09.jpg" class="project-photo link">
+                <img src="./images/fresh-coffee-image-09.jpg" alt="someone pours milk into coffee" width="360" height="300">
+                <div class="portfolio-section-container">
+                  <h2 class="project-tittle">Fresh Coffee</h2>
+                  <p class="project-text">Web Site</p>
+                </div>
+              </a>
+            </li>
+          </ul>
+        </div>
       </section>
     </main>
+    
     <footer class="footer">
-      <a href="./index.html" class="footer-logo link">Web<span class="footer-logo-span">Studio</span></a>
-      <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>    
+      <div class="container">
+        <a href="./index.html" class="footer-navigation-logo link">Web<span class="logo-footerspan">Studio</span></a>
+        <p class="footer-text">Increase the flow of customers and sales for your business with digital marketing & growth solutions.</p>
+      </div>
     </footer>
   </body>
 </html>
