--- a/index.html
+++ b/index.html
@@ -44,19 +44,19 @@
         <div class="container">
           <h2 class="visually-hidden">Our strong sides</h2>
           <ul class="list">
-            <li>
+            <li class="sides-section-list">
               <h3 class="sides-section-heading">Strategy</h3>
               <p class="sides-section-text">Our goal is to identify the business problem to walk away with the perfect and creative solution.</p>
             </li>
-            <li>
+            <li class="sides-section-list">
               <h3 class="sides-section-heading">Punctuality</h3>
               <p class="sides-section-text">Bring the key message to the brand's audience for the best price within the shortest possible time.</p>
             </li>
-            <li>
+            <li class="sides-section-list">
               <h3 class="sides-section-heading">Diligence</h3>
               <p class="sides-section-text">Research and confirm brands that present the strongest digital growth opportunities and minimize risk.</p>
             </li>
-            <li>
+            <li class="sides-section-list">
               <h3 class="sides-section-heading">Technologies</h3>
               <p class="sides-section-text">Design practice focused on digital experiences. We bring forth a deep passion for problem-solving.</p>
             </li>
